# Invest_Today_Antigravity

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  run_local.py
Docs/: agent_workflow.md  handover_guide.txt  todo.md  tool_schemas.md
app/agents/: fundamental.py  judge.py  risk.py  sentiment.py  technical.py
app/api/: routes.py
app/core/: config.py  llm_service.py
app/graph/: nodes.py  state.py  workflow.py
app/rag/: ingestor.py  vector_db.py
app/tools/: economic.py  market_data.py  news.py
app/ui/: dashboard.py
data/cache/: economic_cache.json  llm_cache.json
tests/: test_agents.py  test_api.py  test_graph.py  test_llm_fallback.py  test_phase5_evaluation.py  test_tools.py
